--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,10 @@ edition = "2021"
 anyhow = "1.0.75"
 dioxus = "0.4.0"
 dioxus-desktop = "0.4.0"
+dioxus-logger = "0.4.1"
+log = "0.4.20"
 md5 = "0.7.0"
 rand = "0.8.5"
-reqwest = "0.11.18"
+reqwest = { version = "0.11.18", features = ["json"] }
 rodio = "0.17.1"
+serde_json = "1.0.105"
