--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ dioxus-logger = "0.4.1"
 log = "0.4.20"
 md5 = "0.7.0"
 rand = "0.8.5"
-reqwest = { version = "0.11.18", features = ["json"] }
+reqwest = { version = "0.11.18", features = ["json", "stream"] }
 rodio = "0.17.1"
 serde_json = "1.0.105"
