--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ md5 = "0.7.0"
 rand = "0.8.5"
 reqwest = { version = "0.11.18", features = ["json", "stream"] }
 rodio = "0.17.1"
+serde = "1.0.185"
 serde_json = "1.0.105"
