--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-dioxus = "0.4.0"
-dioxus-desktop = "0.4.0"
+dioxus = { git = "https://github.com/DioxusLabs/dioxus.git" }
+dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git" }
 dioxus-logger = "0.4.1"
 log = "0.4.20"
 md5 = "0.7.0"
